# xrdpattern

./: .gitignore  LICENSE.txt  P  README.md  exports.py  parse.py  paths.py  pyproject.toml  readme.md  reqs.txt  requirements.txt  serialization.py  setup.py  test.json  xrd_pattern.py  xylib.py
.github/systemreqs/: action.yml
.github/workflows/: unittests.yml  wf.yml
databases/: cod.py  contribs.py  opxrd.py  rruff.py  std.py  thisjson.json
databases/processors/: cod.py  opxrd.py  rruff.py
databases/tools/: csv_label.py  fileIO.py  filter.py  spg_converter.py
file_io/: __init__.py  metadata.py  read.py  write.py  xrd_types.py  xyconv.py
logger/: __init__.py  logger.py
manual/: binary_analyser.py  binary_parse.py  main.py  parse_cod.py  parse_rruff.py  parse_std.py  ruff_spgs.txt  selection.py
manual/tools/: filter.py
manual_parsing/: icsd_parsing.py
manual_parsing/tools/: filter.py
parsing/tools/: binary_analyser.py
serialization/: __init__.py  serialize.py
special/: contribs.py
special/processors/: ase_db.py  opxrd.py  rruff.py
special/tools/: csv_label.py
t_xrdpattern/: t_db.py  t_parser.py  t_xrdpattern.py  t_xrdpattern_cls.py  tox.ini
test/: t_pattern_db.py
test_suite/: t_pattern_db.py  tox.ini
tests/: base_pattern.py  base_tests.py  basetest.py  locations.py  pattern.json  t_base.py  t_basis.py  t_db.py  t_labels.py  t_parser.py  t_pattern.py  t_pattern_db.py  t_stoe.py  t_xrdpattern.py  t_xrdpattern_cls.py  tox.ini
tests/base/: __init__.py  base_tests.py
tests/csv/: t_read_csv.py  t_selector.py  t_table.py  t_tableselector.py
tests/examples/: aimat.json  aimat.pkl  stoe.raw
tests/t_crystal/: base_crystal.py  crystal_test.py  t_basis.py  t_calculation.py  t_fromcif.py  t_properties.py  t_standard.py
tests/t_csv/: t_read_csv.py  vertical.csv
tests/t_labels/: t_base.py  t_crystal.py  t_labels.py  t_pymatgen.py
tests/t_parsing/: t_parser.py  t_read_csv.py
tests/t_pattern/: t_db.py  t_pattern.py  t_xrdpattern.py
tests/t_powder/: examples.py  t_base.py  t_crystal.py  t_labels.py  t_pymatgen.py  t_tensorization.py
tests/t_tools/: t_spg_converter.py
xrd_file_io/: __init__.py  find_files.py  read_write.py  xrd_types.py  xyconv.py
xrd_logger/: __init__.py  report.py  xrdlogger.py
xrd_pattern/pattern/: __init__.py  pattern.py  pattern_db.py
xrd_pattern/xrd_logger/: __init__.py  xrdlogger.py
xrdpattern/: __init__.py  pattern_db.py  xrd_pattern.py
xrdpattern/core/: __init__.py  experiment.py  intensity_map.py  label.py  labels.py  metadata.py  pattern_data.py  pattern_info.py  powderexperiment.py  xrd_data.py  xrd_intensities.py
xrdpattern/crystal/: __init__.py  examples.py
xrdpattern/database/: __init__.py  db.py  pattern_db.py
xrdpattern/examples/: .~lock.data.xlsx#  __init__.py  aimat.json  data.cif  data.py  data.xlsx  labels.py  multi.csv  single.csv  vertical.csv
xrdpattern/logging/: logger.py
xrdpattern/parsing/: __init__.py  csv_reader.py  data_formats.py  formats.py  master.py  masterparser.py  options.py  parser.py  path_tools.py  read_write.py  report.py  xrdparser.py  xyconv.py  xylib_repr.py
xrdpattern/pattern/: __init__.py  analysis.py  analysis_tools.py  db.py  db_report.py  intensity_map.py  metadata.py  pattern.py  pattern_health.py  pattern_report.py  progress_tracker.py  reports.py  visualization.py
xrdpattern/powder/: __init__.py
xrdpattern/tools/: csv_label.py  pathtools.py  serialization.py  spg_converter.py
xrdpattern/xrd/: data.py  (+9 more)
xylib/: README.rst  csv.cpp
xylib_dir/: PKG-INFO  xylib.i  xylib_wrap.cpp
(+112 files in other folders)
